--- a/mails/templates/token_activation.tmpl
+++ b/mails/templates/token_activation.tmpl
@@ -1,7 +1,7 @@
 {{define "subject"}}Movies API account activation{{end}}
 
 {{define "plainBody"}} 
-Hi {{.Name}},
+Hi {{.userName}},
 
 You're receiving this email because a new token activation was requested.
 
@@ -24,7 +24,7 @@ Thank you for registering.
 </head>
 
 <body>
-    <p>Hi {{.Name}},</p>
+    <p>Hi {{.userName}},</p>
     <p>You're receiving this email because a new token activation was requested.</p>
 
     <p>For account activation please send to the endpoint: `PUT /v1/users/activated`, the following JSON payload:</p>
@@ -40,3 +40,6 @@ Thank you for registering.
 
 </html>
 {{end}}
+
+
+Lucajuli3012
